feat: UserSession 정책 변경 구현 및 관련 기능 활성화