@@ -1,27 +1,17 @@
 package com.sprint.mission.otboo.domain.authuser.auth.exception;
 
+import java.util.Map;
 import org.springframework.http.HttpStatus;
 
-import java.util.Collections;
-import java.util.Map;
-
-public class InvalidCredentialsException extends AuthException {
+public class InvalidCredentialsException extends AuthException{
 
   private static final String MESSAGE = "아이디 혹은 비밀번호가 잘못되었습니다.";
-
-  private InvalidCredentialsException(Map<String, Object> details) {
-    super(HttpStatus.UNAUTHORIZED, MESSAGE, details);
-  }
 
   private InvalidCredentialsException(Map<String, Object> details, Throwable cause) {
     super(HttpStatus.UNAUTHORIZED, MESSAGE, details, cause);
   }
 
   public static InvalidCredentialsException withNone() {
-    return new InvalidCredentialsException(Collections.emptyMap());
-  }
-
-  public static InvalidCredentialsException withCause(Throwable cause) {
-    return new InvalidCredentialsException(Collections.emptyMap(), cause);
+    return new InvalidCredentialsException(Map.of(), null);
   }
 }
